# pathlib-extensions

./: README.md  cleanup.sh  pyproject.toml  requirements.dev.txt  setup.py
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: python-tests.yml
src/pathlib_extensions/: __init__.py  filesystem.py  nullable.py  overwrite.py  prepare.py
tests/: test_filesystem.py  test_init.py  test_nullable.py  test_overwrite.py  test_prepare.py
